--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="./icon.png" sizes="64x64">
+    <!-- fallback font -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Kasia Sobczyk</title>
   </head>
   <body>
